--- a/seccion 20/graficos/src/app/components/radar/radar.component.html
+++ b/seccion 20/graficos/src/app/components/radar/radar.component.html
@@ -10,7 +10,7 @@
   </div>
   </div>
   <div class="col-md-4">
-    <button class="btn btn-primary btn-block"  (click)="randomize()">Actualizar</button>
+    <button class="btn btn-primary btn-block custom"  (click)="randomize()">Actualizar</button>
   </div>
 
 </div>
