--- a/seccion 20/graficos/src/styles.css
+++ b/seccion 20/graficos/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.custom{
+  font-size:24px;
+  margin-top: 30px;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.8)
+}
