--- a/seccion 13_new/pelisApp/src/app/components/home/home.component.html
+++ b/seccion 13_new/pelisApp/src/app/components/home/home.component.html
@@ -1,3 +1,44 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Peliculas App</h1>
+    <p class="lead">Esta es una aplicación de peliculas</p>
+  </div>
+</div>
+
+<div class="container">
+  <h1>Cartelera</h1>
+  <hr>
+  <div class="row">
+    <div class="col-sm-6">
+        <div class="row">
+          <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+
+          </div>
+          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+            
+          </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="row">
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+
+        </div>
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+          
+        </div>
+      </div>
+        <div class="row">
+          <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+
+          </div>
+        </div>
+    </div>
+
+  </div>
+</div>
