--- a/seccion 13_new/pelisApp/src/app/components/home/home.component.html
+++ b/seccion 13_new/pelisApp/src/app/components/home/home.component.html
@@ -8,33 +8,35 @@
 <div class="container">
   <h1>Cartelera</h1>
   <hr>
-  <div class="row">
+  <div class="row" *ngIf="cartelera">
+
     <div class="col-sm-6">
         <div class="row">
-          <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+          <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image':'url('+ ( cartelera[0]|peliculaImagen ) +')'}">
 
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url('+ ( cartelera[1]|peliculaImagen ) +')'}">
 
           </div>
-          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url('+ ( cartelera[2]|peliculaImagen ) +')'}">
             
           </div>
         </div>
     </div>
+
     <div class="col-sm-6">
       <div class="row">
-        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url('+ ( cartelera[3]|peliculaImagen ) +')'}">
 
         </div>
-        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image':'url('+ ( cartelera[4]|peliculaImagen ) +')'}">
           
         </div>
       </div>
         <div class="row">
-          <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image':'url(http://image.tmdb.org/t/p/w500/cjFFSjSaXC5uLZXFLFupLZ56LKD.jpg)'}">
+          <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image':'url('+ ( cartelera[5]|peliculaImagen ) +')'}">
 
           </div>
         </div>
