--- a/seccion 13_new/pelisApp/src/app/components/buscar/buscar.component.html
+++ b/seccion 13_new/pelisApp/src/app/components/buscar/buscar.component.html
@@ -1,3 +1,29 @@
-<p>
-  buscar works!
-</p>
+<div class="container main-container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group">
+        <label for="buscar">Buscar:</label>
+        <input 
+              [(ngModel)]="buscar" 
+              type="text" 
+              name="buscar" 
+              class="form-control"
+              placeholder="Buscar una pelicula" 
+              (keyup.enter)="buscarPelicula()">
+      </div>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="card-columns">
+      <div class="card" *ngFor="let pelicula of _ps.peliculas">
+        <img class="card-img-top" [src]="pelicula|peliculaImagen" [alt]="pelicula.original_title">
+        <div class="card-body">
+          <h4 class="card-title">{{pelicula.title}}</h4>
+          <p class="card-text text-justify">{{pelicula.overview | slice:0:250}}...</p>
+          <button class="btn btn-outline-primary btn-block">Ver Más</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
