--- a/seccion 13_new/pelisApp/src/app/components/buscar/buscar.component.html
+++ b/seccion 13_new/pelisApp/src/app/components/buscar/buscar.component.html
@@ -21,7 +21,7 @@
         <div class="card-body">
           <h4 class="card-title">{{pelicula.title}}</h4>
           <p class="card-text text-justify">{{pelicula.overview | slice:0:250}}...</p>
-          <button class="btn btn-outline-primary btn-block">Ver Más</button>
+          <button class="btn btn-outline-primary btn-block" [routerLink]="['/pelicula', pelicula.id, 'buscar', buscar]">Ver Más</button>
         </div>
       </div>
     </div>
