--- a/seccion 13_new/pelisApp/src/app/components/pelicula/pelicula.component.html
+++ b/seccion 13_new/pelisApp/src/app/components/pelicula/pelicula.component.html
@@ -21,6 +21,7 @@
         Voto promedio :<span class="badge badge-primary"> {{pelicula.vote_average| number:'.2-2'}}</span>
       </p>
 
+      <button class="btn btn-outline-danger" [routerLink]="['/' + regresarA, busqueda ]">Regresar</button>
     </div>
   </div>
 
