--- a/seccion 14/mapas/src/app/app.component.html
+++ b/seccion 14/mapas/src/app/app.component.html
@@ -1,5 +1,19 @@
 <app-navbar></app-navbar>
 
-<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
-  <!--<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>-->
-</agm-map>
+<div class="container main-container">
+  <div class="row">
+    <div class="col-md-4">
+      <h5>Marcador</h5>
+    </div>
+    <div class="col-md-8">
+        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
+          <agm-marker [latitude]="lat" [longitude]="lng">
+              <agm-info-window>
+                <strong>Titulo</strong>
+                <p>Hola Desde la procu</p>
+              </agm-info-window>
+          </agm-marker>
+        </agm-map>        
+    </div>
+  </div>
+</div>
