--- a/seccion 14/mapas/src/app/app.component.html
+++ b/seccion 14/mapas/src/app/app.component.html
@@ -6,11 +6,13 @@
       <h5>Marcador</h5>
     </div>
     <div class="col-md-8">
-        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
-          <agm-marker [latitude]="lat" [longitude]="lng">
+        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" (mapClick)="clickMapa($event)">
+          <agm-marker [latitude]="marcador.lat" [longitude]="marcador.lng" [title]="marcador.titulo" [markerDraggable]="marcador.draggable" *ngFor="let marcador of _ms.marcadores">
               <agm-info-window>
-                <strong>Titulo</strong>
-                <p>Hola Desde la procu</p>
+                <strong>{{marcador.titulo}}</strong>
+                <p *ngIf="marcador.desc">
+                  {{marcador.desc}}
+                </p>
               </agm-info-window>
           </agm-marker>
         </agm-map>        
