--- a/seccion 14/mapas/src/app/app.component.html
+++ b/seccion 14/mapas/src/app/app.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-md-8">
         <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" (mapClick)="clickMapa($event)">
-          <agm-marker [latitude]="marcador.lat" [longitude]="marcador.lng" [title]="marcador.titulo" [markerDraggable]="marcador.draggable" *ngFor="let marcador of _ms.marcadores">
+          <agm-marker [latitude]="marcador.lat" [longitude]="marcador.lng" [title]="marcador.titulo" [markerDraggable]="marcador.draggable" *ngFor="let marcador of _ms.marcadores; let i=index" (markerClick)="clickMarcador(marcador, i)" (dragEnd)="dragEndMarcador(marcador, $event)" >
               <agm-info-window>
                 <strong>{{marcador.titulo}}</strong>
                 <p *ngIf="marcador.desc">
