--- a/seccion 14/mapas/src/app/app.component.html
+++ b/seccion 14/mapas/src/app/app.component.html
@@ -3,7 +3,26 @@
 <div class="container main-container">
   <div class="row">
     <div class="col-md-4">
-      <h5>Marcador</h5>
+      <div *ngIf="marcadorSel">
+        <h5>Marcador</h5>
+        <hr>
+        <div class="form-group">
+          <label>Titulo</label>
+          <input [(ngModel)]="marcadorSel.titulo" type="text" name="titulo" class="form-control">
+        </div>
+        <div class="form-group">
+            <label>Descripcion</label>
+            <textarea  [(ngModel)]="marcadorSel.desc" type="text" name="desc" rows="5" class="form-control"></textarea>
+        </div>
+        <div class="form-group">
+            <label>¿Se puede mover?</label>
+            <select  [(ngModel)]="draggable" name="draggable" class="form-control" (change)="cambiarDraggable()">
+              <option value="1">Si</option>
+              <option value="0">No</option>
+            </select>
+        </div>
+        <button class="btn btn-outline-primary btn-block" (click)="_ms.guardarMarcadores()">Guardar Cambios</button>
+      </div>
     </div>
     <div class="col-md-8">
         <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" (mapClick)="clickMapa($event)">
@@ -12,6 +31,9 @@
                 <strong>{{marcador.titulo}}</strong>
                 <p *ngIf="marcador.desc">
                   {{marcador.desc}}
+                </p>
+                <p>
+                  <a class="text-danger puntero" (click)="borrarMarcador(i)">Borrar Marcador</a>
                 </p>
               </agm-info-window>
           </agm-marker>
