--- a/seccion 15/youtubeapp/src/app/components/home/home.component.html
+++ b/seccion 15/youtubeapp/src/app/components/home/home.component.html
@@ -1,5 +1,32 @@
 <div class="container main-container">
   <h1>Canal de Youtube</h1>
   <hr>
+
+  <div class="card-columns" *ngIf="videos.length>0">
+    <div class="card animated fadeIn fast" *ngFor="let video of videos">
+      <img class="card-img-top" [src]="video.thumbnails.high.url" [alt]="video.title">
+      <div class="card-body">
+        <h5 class="card-title">{{video.title}}</h5>
+        <button class="btn btn-outline-primary btn-block"  (click)="verVideo(video)">Ver video</button>
+      </div>
+    </div>
+  </div>
+  <!-- Modal -->
+  <div class="modal" id="myModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+
+      <div class="modal-content" *ngIf="videoSel">
+        <div class="modal-header">
+          <h5 class="modal-title">{{videoSel.title}}</h5>
+        </div>
+        <div class="modal-body">
+          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/{{ videoSel.resourceId.videoId}}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar Modal</button>
+        </div>
+      </div>
+    </div>
+  </div>
   
 </div>
