--- a/seccion 15/youtubeapp/src/app/components/home/home.component.html
+++ b/seccion 15/youtubeapp/src/app/components/home/home.component.html
@@ -11,8 +11,10 @@
       </div>
     </div>
   </div>
+
+  <button class="btn btn-outline-primary btn-block" (click)="cargarMas()">Cargar más videos</button>
   <!-- Modal -->
-  <div class="modal" id="myModal" tabindex="-1" role="dialog">
+  <div class="modal" id="myModal" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog" role="document">
 
       <div class="modal-content" *ngIf="videoSel">
@@ -20,10 +22,10 @@
           <h5 class="modal-title">{{videoSel.title}}</h5>
         </div>
         <div class="modal-body">
-          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/{{ videoSel.resourceId.videoId}}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+          <iframe width="100%" height="300px" [src]=" videoSel.resourceId.videoId | videoYoutube" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar Modal</button>
+          <button type="button" class="btn btn-secondary" (click)="cerrarModal()">Cerrar Modal</button>
         </div>
       </div>
     </div>
